* 2014-05-08 - thorben.betten@open-xchange.com

 - Fix for bug 32358: Do not append references to inline image for modifiable message content

* 2014-05-08 - ioannis.chouklis@open-xchange.com

 - Fix for bug 32392: Do not throw an exception when the request body is null; the null value is interpreted as a remove operation

* 2014-05-07 - marc.arens@open-xchange.com

 - Fix for bug 32326: Send proper exception when non-member tries to send to GroupDispatcher
 
* 2014-05-07 - ioannis.chouklis@open-xchange.com

 - Fix for bug 32369: Use the correct HTTP method, i.e. POST and the correct response code from Xing, i.e. 201.
 - Fix for bug 32384: Throw an exception and stop the com.openexchange.push.udp bundle if there is a misconfiguration with the hostname 

* 2014-05-07 - lars.hoogestraat@open-xchange.com

 - Fix for bug 32351: Fix for bug 32351: Throwing error message if mail is expunged in the meantime

* 2014-05-07 - martin.schneider@open-xchange.com

 - Fix for bug 32263: Set transport password instead of IMAP password for account update

* 2014-05-07 - thorben.betten@open-xchange.com

 - Fix for bug 32339: Drop comments in advance
 - Fix for bug 32350: Deal with empty array on mailbox append operation
 - Fix for bug 32361: Introduced capability "xingjson" to signal presence of XING JSON bundle
 - Fix for bug 32285: More resource-reluctant approach when performing an IMAP FETCH command
 - Fix for bug 32371: Check validity of created-by/modified-by from appointment prior to trying to load user information
 - Fix for bug 32317: Support boolean URL parameter "setFrom" to signal reply template generated by server shall contain "From" header from
                      original message

* 2014-05-06 - marcus.klein@open-xchange.com

 - Fix for bug 32272: Java must be installed completely before open-xchange-core post installation scripts are executed.
 - Fix for bug 32102: Only increment transaction counter if replication monitor is enabled.
